fix: #25335 Lower header z-index under lightboxes' one

--- a/docs/ODE/style.css
+++ b/docs/ODE/style.css
@@ -12566,7 +12566,7 @@ header.main {
  position:fixed;
  top:0;
  left:0;
- z-index:100000;
+ z-index:9000;
  width:100%
 }
 .container .main.wrapper {
